# meta_tuple

./: Cargo.toml  LICENSE-APACHE  README.md
derive/: Cargo.toml  README.md
derive/src/: lib.rs
src/: dynamic.rs  into.rs  item.rs  lib.rs  macro.rs  query.rs
tests/: test.rs  use_case.rs
