[workspace]
members = ["derive"]

[package]
name = "meta_tuple"
version = "0.4.0"
edition = "2024"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/meta_tuple"
description = """
A statically typed opaque tuple that can contain any type.
"""
keywords = ["tuple", "any", "downcast"]

[lib]
doctest = false

[features]
default = ["derive"]
derive = ["meta_tuple_derive"]

[dependencies]
meta_tuple_derive = { version = "0.2", path = "./derive", optional = true }

