[package]
name = "meta_tuple_derive"
version = "0.2.0"
edition = "2024"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/meta_tuple"
description = """
Derive macros for meta_tuple.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
